--- a/best_hotels/client/js/templates/hotels/home.html
+++ b/best_hotels/client/js/templates/hotels/home.html
@@ -26,11 +26,11 @@
                <ul class="nav navbar-nav pull-right">
                     <li><a href="#">My Favorites</a></li>
                     <li><a href="#">User Name</a></li>
-                    <li role="presentation" class="pull-right"><a ng-href="/auth/login.html">Sign Up</a>
+                    <li role="presentation" class="pull-right" ng-hide="{{userNav}}"><a ng-href="/signup">Sign Up</a>
                     </li>
-                    <li role="presentation" class="pull-right"><a ng-href="/auth/signup.html">Log In</a>
+                    <li role="presentation" class="pull-right" ng-hide="{{userNav}}"><a ng-href="/login">Log In</a>
                     </li>
-                     <li role="presentation" class="pull-right"><a ng-href="/home">Logout</a>
+                    <li role="presentation" class="pull-right" ng-show="{{userNav}}"><a ng-href="/logout">Logout</a>
                     </li>
                     <li role="presentation"><a href="#">Host {{user.displayName}}</a></li>
                     <img class = "profileimage"ng-src="{{user.picture}}" alt="" width="40px" height="40px">
