--- a/best_hotels/client/js/templates/hotels/new.html
+++ b/best_hotels/client/js/templates/hotels/new.html
@@ -8,8 +8,8 @@
               </ul>
             </div>
               <ul class="nav navbar-nav pull-right">
-                 <li><a href="#">My Favorites</a></li>
-                 <li><a href="#">User Name</a></li>
+                 <!-- <li><a href="#">My Favorites</a></li> -->
+                <!--  <li><a href="#">User Name</a></li> -->
                  <li role="presentation" class="pull-right" ng-hide="{{userNav}}"><a ng-href="/signup">Sign Up</a>
                  </li>
                  <li role="presentation" class="pull-right" ng-hide="{{userNav}}"><a ng-href="/login">Log In</a>
