--- a/best_hotels/client/css/style.css
+++ b/best_hotels/client/css/style.css
@@ -247,14 +247,16 @@
 }
 .hotelimg{
   width: 401px;
-  height: 401px;
-  margin-bottom: 3360px;
-
+  height: 267px;
+ /* padding-bottom: 260px;*/
 }
 .imgsize{
-width: 407px;
-height: 307px;
-padding-bottom: 70px;
+/*width: 401px;
+height: 267px;*/
+width: 24vw;
+height: 14vw;
+max-width: 100%;
+
 }
 
 
@@ -318,38 +320,38 @@ h1 {
   color: #222;
 }
 
-.relative{
-  position: absolute;
-  
-  padding-top: 15px
-  padding-bottom: 15px;
-}
 .arrowleft{
-  position: relative;
-  margin-top: 20px;
-/*  margin-top: 20px;*/
-  padding: 25px;
-  padding-left: 16px;
+  position: absolute;
+  top: 35px;
+  left: 13px;
 }
 .arrowright{
+  position: absolute;
+  top: 72px;
+  left: 300px;
+}
+.relative{
   position: relative;
-  margin-top: -170px;
-  padding-left: 335px;
+  padding-bottom: 25px;
+  
+  /*padding-top: 15px;*/
+ /* padding-bottom: 15px;*/
+}
+.dollar{
+  padding-top: 7px;
+  padding-left: 7px;
 }
 .price_on_img{
-  position: relative;
-  padding-top: 5px;
-  padding-left: 5px;
-  padding-right: 5px;
-  padding-bottom: 1px;
-  margin-top: -90px;
+  position: absolute;
+  top: 145px;
+  left: 0px;
   font-size: 20px;
   color:white;
   font-weight: bold;
   background: gray;
-  width: 60px;
-  /*height: 70px;*/
-  /*text-align: center; */
+  width: 4.5vw;
+  height: 3vw;
+  max-width: 100%;
 }
 
 
