--- a/best_hotels/client/js/templates/hotels/index.html
+++ b/best_hotels/client/js/templates/hotels/index.html
@@ -428,18 +428,16 @@
               </div>
   </div>
 </div><!-- closing container fluid -->
-<div>
-
-<div class="row">
-  <div class="col-xs-6">
-   <div class="container-fluid">
-      <div class="row">
-        <sliderhotels hotel="hotel" ng-repeat="hotel in hotels track by $index"></sliderhotels>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-xs-6">
+     <div class="container-fluid">
+        <div class="row">
+          <sliderhotels hotel="hotel" ng-repeat="hotel in hotels track by $index"></sliderhotels>
+        </div>
       </div>
+    </div>
+    <div class="col-xs-6" id="map">
+    </div>
   </div>
-  </div>
-  <div class="col-xs-6">
-    <!-- add map stuff here -->
-  </div>
-</div>
 </div>   
