--- a/best_hotels/client/js/templates/hotels/show.html
+++ b/best_hotels/client/js/templates/hotels/show.html
@@ -53,9 +53,9 @@
            <div class="row">
               <p class="col-md-12 page-header"></p>
                 <span class="amen">The Space</span>
-                 <span class="showspace">Accommodates:</span><span class="number"> {{hotel.accommodates}} </span>
-                 <span class="spacebetween">Room Type: {{hotel.hotelroomtypes}}</span> 
-                 <span class="spacebetween">Beds:</span><span class="number"> {{hotel.bedNumber}}</span>
+                 <span class="showspace">Accommodates:</span><span class="number"> {{hotel.accommodates.name}} </span>
+                 <span class="spacebetween">Room Type: {{hotel.hotelroomtypes.name}}</span> 
+                 <span class="spacebetween">Beds:</span><span class="number"> {{hotel.bedNumber.name}}</span>
           </div>
            <div class="row">
               <p class="col-md-12 page-header"></p>
