styling edit delet button on show pg

--- a/client/js/templates/hotels/show.html
+++ b/client/js/templates/hotels/show.html
@@ -8,17 +8,17 @@
               </ul>
             </div>
                <ul class="nav navbar-nav pull-right">
-                 <!-- <li><a href="#">My Favorites</a></li> -->
-                <!--  <li><a href="#">User Name</a></li> -->
-                 <li role="presentation" class="pull-right" ng-hide="{{userNav}}"><a ng-href="/signup">Sign Up</a>
-                 </li>
-                 <li role="presentation" class="pull-right" ng-hide="{{userNav}}"><a ng-href="/login">Log In</a>
-                 </li>
-                  <li role="presentation" class="pull-right" ng-show="{{userNav}}"><a ng-href="/logout">Logout</a>
-                 </li>
-                 <li role="presentation"><a href="#">Host {{user.displayName}}</a></li>
-                 <img class = "profileimage"ng-src="{{user.picture}}" alt="" width="40px" height="40px">
-              </ul>
+                    <!-- <li><a href="#">My Favorites</a></li> -->
+                    <!-- <li><a href="#">User Name</a></li> -->
+                    <li role="presentation" class="pull-right" ng-hide="{{userNav}}"><a ng-href="/signup">Sign Up</a>
+                    </li>
+                    <li role="presentation" class="pull-right" ng-hide="{{userNav}}"><a ng-href="/login">Log In</a>
+                    </li>
+                    <li role="presentation" class="pull-right" ng-show="{{userNav}}"><a ng-href="/logout">Logout</a>
+                    </li>
+                    <li role="presentation"><a href="#"><span ng-show="{{user.host}}">Host</span> {{user.displayName}}</a></li>
+                    <img class = "profileimage"ng-src="{{user.picture}}" alt="" width="40px" height="40px">
+               </ul>
         </div><!-- /.container-fluid -->
       <img class="imgshow" ng-src="{{hotel.photos[0]}}">
     </div>
@@ -28,19 +28,18 @@
 <!-- </div> -->
 <div class="container-fluid">
  <div class="col-md-12 col-md-offset-1">
-  <div class="row">
-    <a ng-href="/hotels/{{hotel._id}}/edit" class="btn btn-default" ng-show="user._id===hotel.user">
-      edit
-    </a>
-    <div ng-click="deleteHotel(hotel)" class="btn btn-default" ng-show="user._id===hotel.user">
-      delete
-    </div>
-
-  </div>
       <div class="col-md-6">
           <div class="row">
             <div class="col-md-6">
               <h2>{{hotel.hotelname}} {{hotel.starRating}}</h2>
+            </div>
+            <div class="pull-right">
+              <a ng-href="/hotels/{{hotel._id}}/edit" class="btn btn-default" ng-show="user._id===hotel.user">
+                edit
+              </a>
+              <div ng-click="deleteHotel(hotel)" class="btn btn-warning" ng-show="user._id===hotel.user">
+                delete
+              </div>
             </div>
           </div>
           <div class="row">
@@ -89,6 +88,8 @@
           </div>
       </div>
      </div> 
+    
+
      <div class="col-md-4">
        <div class="row price">
           <div class="col-md-1 text-center">
