--- a/client/js/templates/hotels/edit.html
+++ b/client/js/templates/hotels/edit.html
@@ -528,7 +528,7 @@
               <div class="row">
                 <div class="form-group col-md-12 col-md-offset-2">
                   <div class="form-group col-md-6 pull-right">
-                   <input type="submit" value="create" class="myButton">
+                   <input type="submit" value="edit" class="cancelButton">
                   </div>
                 </div>  
               </div>
