--- a/client/js/templates/hotels/show.html
+++ b/client/js/templates/hotels/show.html
@@ -18,6 +18,10 @@
                     </li>
                     <li role="presentation"><a href="#"><span ng-show="{{user.host}}">Host</span> {{user.displayName}}</a></li>
                     <img class = "profileimage"ng-src="{{user.picture}}" alt="" width="40px" height="40px">
+
+                    <li role="presentaton"><a href="/hotels/new"<ng-show="user._id===hotel.user">Add Hotel</a>
+                     
+                    </li>
                </ul>
         </div><!-- /.container-fluid -->
       <img class="imgshow" ng-src="{{hotel.photos[0]}}">
@@ -34,6 +38,9 @@
               <h2>{{hotel.hotelname}} {{hotel.starRating}}</h2>
             </div>
             <div class="pull-right">
+              <a ng-href="/hotels/new" class="btn btn-default" ng-show="user._id===hotel.user">
+                add hotel
+              </a>
               <a ng-href="/hotels/{{hotel._id}}/edit" class="btn btn-default" ng-show="user._id===hotel.user">
                 edit
               </a>
